docs(w02): "본문/개발환경 구축" 섹션 작성

--- a/docs/w02 영상출력 및 영상산술연산 실습보고서.md
+++ b/docs/w02 영상출력 및 영상산술연산 실습보고서.md
@@ -10,31 +10,60 @@ HAEM0018-1 멀티미디어신호처리
 
 ### 요약
 
-본 보고서에서는 2023-03-10에 멀티미디어신호처리 과목에서 실습한 내용을 다룬다.  개발환경 구축 및 두 가지의 프로젝트('Hello', 'ImagePro')를 구현하고 빌드하여 실행결과를 확인 하는 것으로 본 실습은 마무리 된다.
+본 보고서에서는 2023-03-10에 멀티미디어신호처리 과목에서 실습한 내용을 다룬다. 개발환경 구축 및 두 가지의 프로젝트('Hello', 'ImagePro')를 구현하고 빌드하여 실행결과를 확인 하는 것으로 본 실습은 마무리 된다.
 
 ### 개발환경
 
-Microsoft Foundation Classes(이하 MFC)는 Windows 운영체제에서 사용가능한 C++ GUI 라이브러리로 MacOS에서는 사용이 불가하다는 단점이 있다. 따라서 본 실습을 위해서 멀티미디어실(G517)의 로컬 컴퓨터를 사용하였으며, 해당 머신은 Windows 10 Pro (x64)가 탑재되어있다. 사용한 IDE는 Visual Studio Professional 2015 버전이다.
+Microsoft Foundation Classes(이하 MFC)는 Windows 운영체제에서 사용가능한 C++ GUI 라이브러리로 MacOS에서는 사용이 불가하다는 단점이 있다. 따라서 본 실습을 위해서 멀티미디어실(G517)의 로컬 컴퓨터와 개인용 컴퓨터를 사용하였다.
+
+개발환경 1 (상명대학교 G517 로컬 컴퓨터):
+- 운영체제: Microsoft Windows 10 Pro (x64)
+- IDE: Visual Studio Professional 2015
+
+개발환경 2 (개인용 컴퓨터):
+- 운영체제: Microsoft Windows 10 Home (x64)
+- IDE: Visual Studio Community 2022
 
 ## 본문
 
 ### 개발환경 구축
 
+개발환경 구축은 IDE의 설치와 의존성 설치 및 프로젝트 구성으로 이루어진다.
+
 #### Visual Studio 설치
 
+Visual Studio는 https://visualstudio.microsoft.com/ko/ 에서 설치가 가능하다. Community 버전을 사용할 경우 무료로 설치가 가능하며, 라이센스가 있을 시에는 Professional 버전을 사용할 수 있다.
 #### MFC 설치
+
+본 실습을 위해서는 Microsoft Foundation Classes 라이브러리가 필요하다. 이는 Visual Studio의 설치가 모두 끝난 후, [도구] - [도구 및 기능 가져오기] 메뉴에서 '빌드 도구용 C++ MFC'를 선택하여 설치할 수 있다.
+
+![](./images/MFC설치.PNG)
 
 #### 프로젝트 생성과 초기 설정
 
+[새 프로젝트 만들기]를 열고, 'C++'언어의 'MFC 앱' 템플릿을 선택하여 MFC 프로젝트를 생성할 수 있다.
+
+프로젝트를 생성한 후에 '문자 집합'을 비활성화 해주면 문자 인코딩으로 인해 발생하는 오류를 줄일 수 있다. [프로젝트] - [속성] - [구성속성/고급] 에서 '문자 집합'을 '설정 안 함'으로 변경하여 설정을 완료한다.
+
 #### Visual Studio의 Debugger 사용
+
+중단점(Breakpoint) 기능을 사용할 수 있다. 중단점 설정 후 [디버그] - [디버깅 시작] 메뉴를 선택하여 디버깅을 시작할 수 있다. 임의의 중단점에서 변수의 주소 및 값을 조회할 수 있다.
+
+메모리 상에서 raw 값을 조회하고 싶은 경우, 디버거를 통해 조회할 주소를 알아낸 후, 찾아낼 주소를 [보기] - [메모리 뷰]에 입력하여 탐색할 수 있다. 16진수가 2자리씩 하나의 Byte를 이루어 표시된다.
 
 #### DIPSIM v2.0 사용
 
+Visual Studio의 디버거와 메모리 뷰를 통해 화소의 픽셀 값을 조회할 수 있지만, 강의자료와 함께 배포된 DIPSIM 응용 프로그램을 사용하면 이미지와 관련된 다양한 기능을 직관적인 GUI를 통해 이용할 수 있다. 히스토그램이나 화솟값 처리 및 조회와 같은 다양한 기능이 있다.
+
 #### 이미지 데이터셋 준비
+
+강의자료와 함께 배부된 '이미지.zip'의 자료를 사용한다. *.raw 파일과 *.bmp, *.jpg, *.pmg 파일이 존재한다. *.raw 파일은 이미지에 대한 정보가 제공되지 않지만 *.bmp, *.jpg와 같은 이미지 형식은 이미지의 해상도 및 다양한 정보가 파일 헤더에 명시되어 있음에 유의한다.
 
 ### MFC 프로그래밍
 
 #### 윈도우 프로그램 작성
+
+
 
 #### 부메뉴 생성 및 연결 함수 작성
 
