docs(w02): 개발환경 부분 수정 보완

--- a/docs/w02 영상출력 및 영상산술연산 실습보고서.md
+++ b/docs/w02 영상출력 및 영상산술연산 실습보고서.md
@@ -33,17 +33,20 @@ Microsoft Foundation Classes(이하 MFC)는 Windows 운영체제에서 사용가
 #### Visual Studio 설치
 
 Visual Studio는 https://visualstudio.microsoft.com/ko/ 에서 설치가 가능하다. Community 버전을 사용할 경우 무료로 설치가 가능하며, 라이센스가 있을 시에는 Professional 버전을 사용할 수 있다.
+
 #### MFC 설치
 
 본 실습을 위해서는 Microsoft Foundation Classes 라이브러리가 필요하다. 이는 Visual Studio의 설치가 모두 끝난 후, [도구] - [도구 및 기능 가져오기] 메뉴에서 '빌드 도구용 C++ MFC'를 선택하여 설치할 수 있다.
 
 ![](./images/MFC설치.PNG)
 
+'C++ MFC' 항목이 나타나지 않는 경우에는 'Visual C++ ...'의 이름을 가진 항목에서 유사한 요소를 찾아 설치할 수 있었다.
+
 #### 프로젝트 생성과 초기 설정
 
 [새 프로젝트 만들기]를 열고, 'C++'언어의 'MFC 앱' 템플릿을 선택하여 MFC 프로젝트를 생성할 수 있다.
 
-프로젝트를 생성한 후에 '문자 집합'을 비활성화 해주면 문자 인코딩으로 인해 발생하는 오류를 줄일 수 있다. [프로젝트] - [속성] - [구성속성/고급] 에서 '문자 집합'을 '설정 안 함'으로 변경하여 설정을 완료한다.
+프로젝트를 생성한 후에 '문자 집합'을 비활성화 해주면 문자 인코딩으로 인해 발생하는 오류를 줄일 수 있다. [프로젝트] - [속성] - [구성속성/고급] 에서 '문자 집합'을 '설정 안 함'으로 변경하여 설정을 완료한다. 만약, `AfxMessageBox()` 함수와 관련하여 오류 메시지가 발생한다면, Visual Studio의 문자 처리 방식으로 인한 함수 시그니처 mismatch 오류일 수 있으므로 이 방법을 반드시 적용해 주는 것이 좋다.
 
 #### Visual Studio의 Debugger 사용
 
