docs(w02): 파일 입출력과 초기 설정 섹션 작성

--- a/docs/w02 영상출력 및 영상산술연산 실습보고서.md
+++ b/docs/w02 영상출력 및 영상산술연산 실습보고서.md
@@ -105,6 +105,35 @@ unsigned char resultImg[256][256];
 
 위와 같이 256x256배열을 선언하여 사용할 경우, 최대 가로x세로 폭이 256 이하인 영상밖에 사용할 수 없다는 한계가 있다. 또한, 각 x,y 좌표에 `unsigned char`의 표현 범위밖에 담을 수 없으므로, 한 픽셀 당 $[0, 255]$ 범위의 내의 값만 할당 할 수 있다. 본 실습에서는 Single-Channel(Gray-scale) 이미지를 사용할 것으로 추측해 볼 수 있었다.
 
+#### 파일 입출력
+
+`Serialize()` 함수의 내용을 편집하여 파일 입출력 처리를 할 수 있다. 이는 [열기] 메뉴를 클릭 할 시에 실행되는 이벤트 처리기로 보여진다.
+
+앞 단계에서 모든 이미지를 `unsigned char[256][256]`의 공간에 저장하므로, 256x256 보다 큰 해상도의 이미지 입력에 대해 예외처리해 줄 필요가 있다. 실습에서는 다음의 코드를 통해 정확히 256x256 크기의 이미지를 제외한 나머지를 예외처리를 하고 있는 모습을 볼 수 있었다.
+
+```c
+CFile *fp = ar.GetFile();
+
+if (fp->GetLength() == 256*256)
+    ar.Read(inputImg, 256*256);
+else
+    AfxMessageBox("256x256 크기의 파일만 사용가능합니다.");
+```
+
+#### 초기 설정
+
+`OnInitialUpdate()` 함수의 내용을 편집하여 프로그램 구동시 최초에 실행할 코드를 작성할 수 있다. `SetScrollSizes()` 함수를 통해 최초의 `CScrollView`의 스크롤 크기를 설정할 수 있다.
+
+```c
+CScrollView::OnInitialUpdate();
+CSize sizeTotal;
+
+sizeTotal.cx = 2048;
+sizeTotal.cy = 1024;
+
+SetScrollSizes(MM_TEXT, sizeTotal);
+```
+
 ### 픽셀 기반 영상처리 프로그래밍
 
 #### 산술 덧셈 연산
