--- a/docs/w02 영상출력 및 영상산술연산 실습보고서.md
+++ b/docs/w02 영상출력 및 영상산술연산 실습보고서.md
@@ -111,7 +111,7 @@ unsigned char resultImg[256][256];
 
 앞 단계에서 모든 이미지를 `unsigned char[256][256]`의 공간에 저장하므로, 256x256 보다 큰 해상도의 이미지 입력에 대해 예외처리해 줄 필요가 있다. 실습에서는 다음의 코드를 통해 정확히 256x256 크기의 이미지를 제외한 나머지를 예외처리를 하고 있는 모습을 볼 수 있었다.
 
-```c
+```cpp
 CFile *fp = ar.GetFile();
 
 if (fp->GetLength() == 256*256)
@@ -138,9 +138,156 @@ SetScrollSizes(MM_TEXT, sizeTotal);
 
 #### 산술 덧셈 연산
 
+산술 덧셈 연산은 행렬에 덧셈 연산을 하는 것과 같다. 이중 for 문을 이용하여 각 픽셀에 상수를 더해주는 실습을 하였다. 또한, 각 픽셀이 오버플로우 되는 것을 방지하기 위해 포화 연산을 적용하였다.
+
+```cpp
+void CImageProDoc::PixelAdd(void)
+{
+    int x, y;
+    int value;
+
+    value = 0;
+
+    for (x = 0; x < 256; x++) {
+        for (y = 0; y < 256; y++) {
+            value = inputImg[x][y];
+
+            // Increase intensity by 100
+            value += 100;
+
+            // Saturated Addition
+            if (value > 255) {
+                resultImg[x][y] = 255;
+            } else {
+                resultImg[x][y] = value;
+            }
+
+        }
+    }
+
+}
+```
+
+![](./images/산술덧셈연산.png)
+
 #### 히스토그램 평활화
 
+히스토그램 평활화 실습에서는 전처리를 통해 히스토그램을 생성하고, 생성된 히스토그램의 누적합을 구한 뒤, 평활화를 수행한다.
+
+다음은 실습에 사용된 코드와는 조금 다르지만 개인적으로 해석한 결과로, 처리과정은 동일한 코드이다.
+
+```cpp
+#define IMG_WIDTH 256
+#define IMG_HEIGHT 256
+#define MAX_INTENSITY 255
+
+void CImageProDoc::PixelHistoEq(void) {
+    int x, y;
+    int i;
+    int nPixels;
+    int pixelValue;
+    int hist[MAX_INTENSITY+1];
+    int histAcc[MAX_INTENSITY+1];
+
+    nPixels = IMG_WIDTH * IMG_HEIGHT;
+
+    // 1. 전처리 과정
+
+    // 1-1. 모든 픽셀에 걸쳐 값의 분포를 조사
+    for (i = 0; i <= MAX_INTENSITY; i++) {
+        hist[i] = 0;
+    }
+    for (x = 0; x < IMG_WIDTH; x++) {
+        for (y = 0; y < IMG_HEIGHT; y++) {
+            pixelValue = inputImg[y][x];
+            hist[pixelValue] += 1;
+        }
+    }
+
+    // 1-2. 누적된 히스토그램 합 계산 (점화식 사용)
+    histAcc[0] = hist[0];
+    for (i = 1; i <= MAX_INTENSITY; i++) {
+        histAcc[i] = histAcc[i-1] + hist[i];
+    }
+
+    // 2. 히스토그램 평활화 수행
+
+    for (x = 0; x < IMG_WIDTH; x++) {
+        for (y = 0; y < IMG_HEIGHT; y++) {
+            pixelValue = inputImg[y][x];
+            resultImg[y][x] = ((float) histAcc[pixelValue]) / nPixels * MAX_INTENSITY;
+        }
+    }
+}
+```
+
+![](./images/히스토그램평활화.png)
+
 #### 두 영상의 산술 덧셈
+
+앞서 '산술 덧셈 연산'에서는 하나의 영상에 상수를 더했다면, 본 실습에서는 두 영상을 산술 덧셈해보았다.
+
+먼저 두 개의 영상을 저장할 공간이 필요하므로, `unsigned char inputImg[][]`외에 추가로 `unsigned char input2Img[][]`를 선언하여 저장공간을 마련해주었다.
+
+```diff
+ class CImageProDoc : public CDocument {
+     ...
+     public:
+         unsigned char inputImg[256][256];
++        unsigned char input2Img[256][256];
+         unsigned char resultImg[256][256];
+     ...
+ }
+```
+
+이어서 두 이미지가 `inputImg`와 `inputImg2`에 저장되어 있을 때, 두 영상을 산술 덧셈하여 `resultImg`에 저장하는 코드를 작성하였다. 덧셈으로 인한 오버플로우가 발생할 수 있기에 포화연산을 적용해준다.
+
+```cpp
+int x, y;
+int pixelValue;
+
+for (x = 0; x < IMG_WIDTH; x++) {
+    for (y = 0; y < IMG_HEIGHT; y++) {
+        pixelValue = inputImg[y][x] + input2Img[y][x];
+
+        // Saturated Addition
+        if (pixelValue > 255) {
+            resultImg[x][y] = 255;
+        } else {
+            resultImg[x][y] = pixelValue;
+        }
+    }
+}
+```
+
+![](./images/두영상의산술덧셈.png)
+
+단, 위의 결과를 얻기 위해서는 두 개의 이미지를 불러오는 함수와, MFC 프로그램 창 위에 3개의 이미지를 출력하는 기능을 구현해야 했다.
+
+먼저, 두 영상을 불러오는 기능을 작성한다. 이는 `LoadTwoImages(void)` 함수를 선언해 동작을 구현해주었다. `LoadTwoImages(void)`에서는 MFC 파일 프롬프트 다이얼로그를 이용하여 이미지를 두 번 불러와, 각각 `inputImg`와 `inputImg2`에 저장하는 동작을 수행한다.
+
+```cpp
+#define IMG_WIDHT 256
+#define IMG_HEIHT 256
+
+char** destination;
+
+destination = inputImg;
+// destination = inputImg2;
+
+CFile file;
+CFileDialog dlg(TRUE);
+
+AfxMessageBox("첫 번째 이미지를 선택하세요.");
+
+if (dlg.DoModal() == IDOK) {
+    file.Open(dlg.GetPathName(), CFile::modeRead);
+    file.Read(destination, IMG_WIDHT*IMG_HEIHT);
+    file.Close();
+}
+```
+
+또한, '두 영상의 산술 덧셈 처리 기능'을 이용한다는 특수한 상황에만 세 가지 이미지를 출력할 수 있도록 하기위해, `int viewMode`라는 변수를 선언해두고, 전처리 매크로를 이용하여 `TWO_IMAGES`와 `THREE_IMAGES` 두 가지 플래그를 선언하여 프로그램의 동작을 제어하였다.
 
 ## 결과
 
